// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quarkus-project map extensions: mappedExtensions 1`] = `
Object {
  "mapped": Array [
    Object {
      "category": "Core",
      "default": false,
      "description": "Build time CDI dependency injection",
      "id": "io.quarkus:quarkus-arc",
      "keywords": Array [
        "arc",
        "cdi",
        "dependency-injection",
        "di",
        "label",
      ],
      "name": "ArC",
      "order": 0,
      "platform": true,
      "shortName": "CDI",
      "tags": Array [],
      "version": "test-version",
    },
    Object {
      "category": "Integration",
      "default": false,
      "description": "Camel support for Netty",
      "id": "io.quarkus:quarkus-camel-netty4-http",
      "keywords": Array [
        "camel-netty4-http",
        "camel",
      ],
      "name": "Camel Netty4 test HTTP",
      "order": 2,
      "platform": true,
      "tags": Array [
        "status:preview",
      ],
      "version": "test-version",
    },
  ],
  "missing": Array [],
}
`;

exports[`quarkus-project parseProjectInQuery correctly with github: github 1`] = `
Object {
  "extensions": Array [
    "some-id",
    "arc",
    "camel-netty4-http",
  ],
  "github": Object {
    "code": "totototo",
    "state": "djdjdj",
  },
  "metadata": Object {
    "artifactId": "code-test",
    "buildTool": "GRADLE",
    "groupId": "org.test",
    "javaVersion": "11",
    "noCode": false,
    "version": "1.0.0-SNAPSHOT",
  },
  "platformOnly": undefined,
  "streamKey": undefined,
}
`;

exports[`quarkus-project parseProjectInQuery correctly: no-github 1`] = `
Object {
  "extensions": Array [
    "some-id",
    "arc",
    "camel-netty4-http",
  ],
  "github": undefined,
  "metadata": Object {
    "artifactId": "code-test",
    "buildTool": "MAVEN",
    "groupId": "org.test",
    "javaVersion": "11",
    "noCode": false,
    "version": "1.0.0-SNAPSHOT",
  },
  "platformOnly": undefined,
  "streamKey": undefined,
}
`;

exports[`quarkus-project parseProjectInQuery with some other metadata: v=1.0 1`] = `
Object {
  "extensions": Array [],
  "github": undefined,
  "metadata": Object {
    "artifactId": "code-with-quarkus",
    "buildTool": "MAVEN",
    "groupId": "org.acme",
    "javaVersion": "11",
    "noCode": false,
    "version": "1.0",
  },
  "platformOnly": undefined,
  "streamKey": undefined,
}
`;
